<resources>
    <string name="app_name">Screen Off</string>
    <string name="permissions_title">Permissions Required</string>
    <string name="permissions_message">This application requires the permission to change the system settings.\n\nYou
        need to grant this permission manually.
    </string>
    <string name="permissions_change">grant permission</string>
    <string name="toast_message">Please tap on \'Allow permission\' and restart the application</string>
    <string name="title_activity_screen_off_setting">Screen Off Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="about">About</string>
    <string name="license">License</string>
    <string name="settings">Settings</string>
    <string name="email">Email me</string>
    <string name="email_chooser">Send email</string>
    <string name="support">Support</string>
    <string name="settings_timeout_description">Set the maximum timeout (in seconds) to wait before turning off the screen.</string>
    <string name="settings_timeout_description_accessibility">As an alternative (the preferred method), you can enable the Screen Off Global Action Performer Accessibility Service, which requires no settings or permissions.</string>
    <string name="accessibility_service_description">Required in Android Pie or higher in order to be able to perform GLOBAL_ACTION_LOCK_SCREEN which can turn off screen without requiring a timeout.\n\nThis is the preferred method for devices running Android Pie or higher.\n\nThe application doesn\'t monitor any user actions.</string>
    <string name="accessibility_service_label">Screen Off Global Action Performer</string>
    <string name="no_settings_description">No settings required!</string>
</resources>
