<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/about"/>
        <item
                android:id="@+id/nav_license"
                android:icon="@drawable/ic_menu_license"
                android:title="@string/license"/>
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/settings"/>
    </group>

    <item android:title="@string/support">
        <menu>
            <item
                    android:id="@+id/nav_email"
                    android:icon="@drawable/ic_menu_email"
                    android:title="@string/email"/>
        </menu>
    </item>

</menu>
