<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="20dp"
              android:orientation="vertical">

    <TextView
            android:layout_width="match_parent"
            android:text="@string/permissions_title"
            android:layout_height="wrap_content" android:id="@+id/tvTitle"
            android:contentDescription="@android:string/dialog_alert_title"
            android:textAppearance="@style/AppTheme.PermissionsDialog.Title"
            android:paddingBottom="10dp"/>
    <TextView
            android:layout_width="match_parent"
            android:text="@string/permissions_message"
            android:layout_height="wrap_content" android:id="@+id/tvWriteSettingsPermissionMessage"
            android:textAppearance="@style/AppTheme.PermissionsDialog.Message"
            android:paddingBottom="10dp"
            android:layout_gravity="center_vertical|start"/>
    <LinearLayout android:layout_width="match_parent"
                  android:paddingBottom="10dp"
                  android:paddingTop="10dp"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <TextView
                android:layout_width="0dp"
                android:text="@android:string/cancel"
                android:layout_height="wrap_content" android:id="@+id/tvCancel"
                android:textAppearance="@style/AppTheme.PermissionsDialog.Buttons"
                android:layout_weight="1"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:textAllCaps="true"
                android:gravity="end"/>
        <TextView
                android:layout_width="wrap_content"
                android:text="@string/permissions_change"
                android:layout_height="wrap_content" android:id="@+id/tvWriteSettingsPermission"
                android:textAppearance="@style/AppTheme.PermissionsDialog.Buttons"
                android:textAllCaps="true"
                android:gravity="end"/>

    </LinearLayout>
</LinearLayout>
